# MSA

./: .gitignore  .gitmodules  CLAUDE.md  README.md  requirements.txt
.claude/: settings.local.json
.github/workflows/: install.yml
.serena/: project.yml
.serena/memories/: done_checklist.md  project_overview.md  style_and_conventions.md  suggested_commands.md
agent/: background_click.py  main.py  recover_action.py  recover_helper.py  recover_reco.py  recover_state.py
agent/arena/: arena_action.py  arena_reco.py
agent/battle/: battle_action.py  battle_manager.py  battle_reco.py
agent/boss/: boss_action.py  boss_reco.py
agent/custom/: __init__.py
agent/custom/arena/: arena_action.py  arena_reco.py
agent/custom/battle/: __init__.py  battle_action.py  battle_reco.py
agent/custom/boss/: boss_action.py  boss_manager.py  boss_reco.py
agent/custom/general/: general_action.py  general_func.py  general_reco.py
agent/custom/lab/: __init__.py  lab_action.py  lab_reco.py
agent/custom/recover/: __init__.py  recover_action.py  recover_manager.py  recover_reco.py
agent/lab/: lab_action.py  lab_reco.py
agent/recover/: recover_action.py  recover_reco.py
agent/utils/: __init__.py  common_action.py  common_func.py  common_reco.py  exceptions.py  manifest_checker.py  resource_updater.py  version_checker.py
assets/: interface.json
assets/resource/announcement/: welcome.md
assets/resource/pipeline/: tools.json  世界BOSS.json  公屏发送.json  卡牌处理.json  后台点击测试.json  实验室.json  恢复.json  意外处理.json  战斗.json  竞技场.json  跑图主流程.json  重置统计数据.json
assets/resource/pipeline/导航/: 前往地图.json  前往竞技场.json  返回主界面.json
assets/resource/pipeline/跑图/: 升级处理.json  恢复.json  战斗.json  战斗旧版.json  获得卡牌处理.json  跑图主流程.json
docs/: MSA v0.3.0.docx  MSA安装与使用指南v0.2.2.docx  后台点击Hook方案规划书.md  后台点击Hook方案规划书v2.md
docs/archive/: 后台点击Hook方案规划书.md
docs/development_notes/: 对自带构建的修改.md  恢复流程函数规划.md  竞技场.md
docs/learn/: README_CUSTOM_RECOGNITION.md  README_RECOVER_ACTION.md
hook/: CMakeLists.txt  build.bat
hook/common/: protocol.h
hook/controller/: controller.cpp  controller.h  screencap.cpp  screencap.h  shared_memory.cpp  shared_memory.h
hook/dll/: dllmain.cpp  hooks.cpp  hooks.h  shared_memory.cpp  shared_memory.h
hook/proxy/: control_unit.cpp  control_unit.h  dllmain.cpp  exports.cpp  injector.cpp  injector.h  shared_memory.cpp  shared_memory.h
hook/test/: click_test.cpp  screencap_test.cpp
my_tools/: analyze_dll_exports.py  check_pipeline.py
my_tools/hook/: analyze_dll_exports.py  check_maa_compat.py
my_tools/hook/maa_baseline/: control_unit_api.json  exports.json  maa_def.json
my_tools/hook/maa_cache/: official_meta.json
tools/: install.py
tools/ci/: configure.py  download_deps.py  install.py  install_background.py  install_cli.py  setup_embed_python.py
